# django_store

./: pyproject.toml  readme.md
blog/: urls.py  views.py
blog/fixtures/: blog_data.json
blog/migrations/: 0001_initial.py  0002_alter_blogpost_options_alter_blogpost_is_published.py  0003_alter_blogpost_preview.py
blog/models/: __init__.py  blogposts.py
blog/templates/blog/: blogpost_confirm_delete.html  blogpost_detail.html  blogpost_form.html  blogpost_list.html
catalog/: admin.py  apps.py  forms.py  urls.py  views.py
catalog/fixtures/: cat_data_new.json  cat_data_new_new.json  catalog_data.json  catalog_data_new.json
catalog/management/commands/: fill.py  fill_category.py  fill_product.py
catalog/migrations/: 0001_initial.py  0002_alter_category_options_alter_product_options_and_more.py  0002_remove_category_slug.py  0003_alter_product_image_version.py  0003_remove_product_slug_product_in_stock.py  0004_alter_version_options.py  0004_category_slug.py  0005_alter_version_options_and_more.py  0005_remove_category_slug.py  0006_category_slug.py  0006_product_versions_version_version_number.py  0007_remove_category_slug.py  0007_version_version_number.py  0008_remove_product_versions.py  0009_product_owner.py
catalog/models/: __init__.py  category.py  product.py  version.py
catalog/templatetags/: mediapath.py
config/: settings.py  urls.py
media/images/: Inspiroy 2S.html
users/: forms.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_is_active.py  0003_alter_user_email.py
users/models/: __init__.py  user.py
(+18 files in other folders)
